Refatoração de pacotes para utilização de DDD, criação do modelo e do serviço do domínio, recurso REST da aplicação e ajustes na lógica da aplicação.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,6 +10,6 @@
  
 	<servlet-mapping>
 		<servlet-name>Jersey Servlet</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+		<url-pattern>/rest_api/*</url-pattern>
 	</servlet-mapping>
 </web-app>
